--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -21,9 +21,7 @@ Delete loop:
 .sp
 .in +5
 .B "losetup \-d"
-.I loopdev
-.RB [ \fIloopdev\fP
-.RB ...]
+.IR loopdev ...
 .sp
 .in -5
 Print name of first unused loop device:
@@ -36,7 +34,7 @@ Setup loop device:
 .sp
 .in +5
 .B losetup
-.RB [{\-e | \-E}
+.RB [{ \-e | \-E }
 .IR encryption ]
 .RB [ \-o
 .IR offset ]
@@ -46,7 +44,7 @@ Setup loop device:
 .RB [ \-p
 .IR pfd ]
 .RB [ \-r ]
-.RB { \-f [ \-\-show ] | \fIloopdev\fP }
+.RB { \-f [ \-\-show ]| \fIloopdev\fP }
 .I file
 .sp
 .in -13
@@ -78,13 +76,13 @@ number, probably by patching the kernel. Standard numbers that are
 always present are 0 (no encryption) and 1 (XOR encryption).
 When the cryptoloop module is loaded (or compiled in), it uses number 18.
 This cryptoloop module will take the name of an arbitrary encryption type
-and finds the module that knows how to perform that encryption.
+and find the module that knows how to perform that encryption.
 .SH OPTIONS
 .IP "\fB\-a, \-\-all\fP"
 show status of all loop devices
 .IP "\fB\-c, \-\-set-capacity\fP \fIloopdev\fP
 force loop driver to reread size of the file associated with the specified loop device
-.IP "\fB\-d, \-\-detach\fP \fIloopdev\fP [\fIloopdev\fP ...]" 
+.IP "\fB\-d, \-\-detach\fP \fIloopdev\fP..."
 detach the file or device associated with the specified loop device(s)
 .IP "\fB\-e, \-E, \-\-encryption \fIencryption_type\fP"
 enable data encryption with specified name or number
@@ -169,7 +167,7 @@ the command
 DES encryption is painfully slow. On the other hand, XOR is terribly weak.
 
 Cryptoloop is deprecated in favor of dm-crypt. For more details see
-.B cryptsetup(8).
+.BR cryptsetup (8).
 .SH AVAILABILITY
 The losetup command is part of the util-linux-ng package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
